cowrie.cfg syntax error

--- a/config/Cowrie/cowrie.cfg
+++ b/config/Cowrie/cowrie.cfg
@@ -21,7 +21,7 @@
     # =====================================
     # Simple Backend Configuration
     # =====================================
-    backend_ssh_hhost = /!\ VM-IP
+    backend_ssh_host = /!\ VM-IP
     backend_ssh_port = 22
 
 
