disable discord web hook by default

--- a/config/Cowrie/cowrie.cfg
+++ b/config/Cowrie/cowrie.cfg
@@ -62,7 +62,8 @@
     port = 3306
     debug = true
 
+    # UNCOMMENT if you want the web hook for discord
     #Send output to Discord
-    [output_discord]
-    enabled = true
-    url = /!\ DISCORD_WEB_HOOK
+    # [output_discord]
+    # enabled = true
+    # url = /!\ DISCORD_WEB_HOOK
