Add author to files

--- a/config/Cowrie/cowrie.cfg
+++ b/config/Cowrie/cowrie.cfg
@@ -1,3 +1,6 @@
+    # FROM  https://github.com/cowrie/cowrie
+
+    
     # ============================================================================
     # General Cowrie Options
     # ============================================================================
